--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,11 @@ visibility: visible;
  visibility: hidden;
 }
 
+.wrapper{
+   width: 80%;
+   max-width: 720px;
+}
+
 .loader{
     width: 75px;
     height: 75px;
