--- a/css/style.css
+++ b/css/style.css
@@ -47,3 +47,12 @@ visibility: visible;
     }
 
 }
+
+.div#bg{
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
