--- a/css/style.css
+++ b/css/style.css
@@ -54,4 +54,8 @@ visibility: visible;
     position: absolute;
     left: 0;
     top: 0;
+    -moz-background-size: 100%; 
+    -webkit-background-size: 100%;
+    -o-background-size: 100%; 
+    background-size: 100%; 
 }
