--- a/css/style.css
+++ b/css/style.css
@@ -49,10 +49,13 @@ visibility: visible;
 }
 
 .div#bg{
-    position:fixed;
-    z-index: -1;
-    top:0;
-    left:0; 
-    min-width:100%;
-    min-height:100%; 
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    -moz-background-size: 100%; 
+    -webkit-background-size: 100%;
+    -o-background-size: 100%; 
+    background-size: 100%; 
 }
