--- a/css/style.css
+++ b/css/style.css
@@ -56,4 +56,5 @@ visibility: visible;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    margin: 0%;
 }
