--- a/css/style.css
+++ b/css/style.css
@@ -47,3 +47,9 @@ visibility: visible;
     }
 
 }
+
+.bg{
+        background: url(media/bg2.jpg) no-repeat center center fixed;
+        background-size: cover;
+        z-index: 1;
+}
