--- a/css/history.css
+++ b/css/history.css
@@ -212,3 +212,8 @@ ul.nacc li p {
   right: 0;
 }
 
+.bg2{
+  background: url(media/bgbl11.jpg) no-repeat center center fixed;
+  background-size: cover;
+  z-index: 1;
+}
