--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ visibility: visible;
 
 }
 
-.bg1{
+.bg{
         background: url(media/bg2.jpg) no-repeat center center fixed;
         background-size: cover;
         z-index: 1;
