--- a/css/style.css
+++ b/css/style.css
@@ -1,55 +1,5 @@
-.preloader{
-position: fixed;
-left: 0;
-top: 0;
-width: 100%;
-height: 100%;
-background: black;
-z-index: 9999;
-transition: 1s all;
-opacity: 1;
-visibility: visible;
-
-}
-
-.done{
- opacity: 0;
- visibility: hidden;
-}
-
-.wrapper{
-   
-    width: 96%;    
-    max-width: 920px;
-    margin: auto;
-    padding: 2%;
-}
-
-.loader{
-    width: 75px;
-    height: 75px;
-    border: 10px solid white;
-    border-radius: 50%;
-    border-top-color: #FFD700;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    animation: 1s spin infinite linear;
-}
-
-@keyframes spin{
-    from{
-        transform: translate(-50%, -50%) rotate(0deg);
+body#bg1{
+    background: url(media/bg2.jpg) no-repeat center center fixed;
+    background-size: cover;
+    z-index: 1;
     }
-    to{
-        transform: translate(-50%, -50%) rotate(360deg);
-    }
-
-}
-
-.bg{
-        background: url(media/bg2.jpg) no-repeat center center fixed;
-        background-size: cover;
-        z-index: 1;
-}
