--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
     }
 
 
-.bg2{
+.bgg{
     background: url(media/bgbl11.jpg) no-repeat center center fixed;
     background-size: cover;
     z-index: 1;
