--- a/css/history.css
+++ b/css/history.css
@@ -8,7 +8,7 @@ body {
 }
 
 .bgg{
-  background: url(media/bgbl11.jpg) no-repeat center center fixed;
+  background: url(media/bg2.jpg) no-repeat center center fixed;
   background-size: cover;
   z-index: 1;
 }
