--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .kykymber{
-        background: url("media/bg2.jpg") no-repeat center center fixed;
+        background: url(media/bg2.jpg) no-repeat center center fixed;
         background-size: cover;
         z-index: 1;
           
